--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,17 +3,6 @@ stages:
 
 cypress_test:
   stage: test
-  image: cypress/base:16.16.0
-  cache:
-    key: ${CI_COMMIT_REF_SLUG}
-    paths:
-      - node_modules/
-  before_script:
-    - npm install
+  image: cypress/included:13.0.0
   script:
-    - npx cypress run --spec "cypress/e2e/todo.cy.js"
-  artifacts:
-    paths:
-      - cypress/screenshots/
-      - cypress/videos/
-    when: always
+    - cypress run --spec "cypress/e2e/todo.cy.js"
