--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,13 @@
 stages:
   - test
 
-cypress_test:
+cypress-e2e-test:
   stage: test
-  image: cypress/included:13.0.0
+  image: cypress/browsers:node18.12.0-chrome103-ff107
   script:
-    - cypress run --spec "cypress/e2e/todo.cy.js"
+    - echo "Running Cypress Tests"
+    - npx cypress run --spec "cypress/e2e/todo.cy.js" --browser firefox
+    - echo "Tests completed successfully."
   artifacts:
     paths:
       - cypress/screenshots/
