--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,11 +2,18 @@ stages:
   - test
 
 cypress-e2e-test:
-  stage: test
   image: cypress/browsers:node18.12.0-chrome103-ff107
+  stage: test
+  cache:
+    key: ${CI_COMMIT_REF_SLUG}
+    paths:
+      - node_modules/
+  before_script:
+    - npm install # Instala dependencias del proyecto, incluyendo Cypress
+    - chmod +x ./node_modules/.bin/cypress # Ajusta permisos
   script:
     - echo "Running Cypress Tests"
-    - npx cypress run --spec "cypress/e2e/todo.cy.js" --browser firefox
+    - npx cypress run --spec "cypress/e2e/todo.cy.js" --browser chrome
     - echo "Tests completed successfully."
   artifacts:
     paths:
