--- a/package.json
+++ b/package.json
@@ -165,7 +165,8 @@
     "yauzl": "^2.10.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "e2e:chrome": "cypress run --browser chrome"
   },
   "author": "",
   "license": "ISC",
