Otra prueba yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,5 +5,5 @@ cypress-e2e-test:
   image: cypress/browsers:node18.12.0-chrome103-ff107
   stage: test
   script:
-    - npm install
-    - npm run e2e:chrome
+    - npm ci
+    - npx cypress run --browser chrome
