--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,4 +6,5 @@ cypress-e2e-test:
   stage: test
   script:
     - npm ci
-    - npx cypress run --browser chrome
+    - ls -R cypress/e2e  # Verificar los archivos en la ruta
+    - npx cypress run --spec "cypress/e2e/todo.cy.js" --browser chrome
