--- a/package.json
+++ b/package.json
@@ -165,8 +165,7 @@
     "yauzl": "^2.10.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "e2e:chrome": "cypress run --browser chrome"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
