--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,8 @@ cypress-e2e-test:
     - ls -R cypress/e2e  # Verificar los archivos en la ruta
     - npx cypress run --spec "cypress/e2e/todo.cy.js" --browser chrome
     - echo "Cleaning up project directory and file based variables"
+    - ps aux 
+    - df -h
   allow_failure: true   # Permite que el trabajo falle sin afectar el pipeline
   only:
     - main
