--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,9 +30,14 @@ cypress-e2e-test:
   stage: test
   script:
     - npm ci
+    - mkdir -p cypress/  # Asegurarse de que el directorio cypress/ exista
     - npm start &
     - ls -R cypress/e2e  # Verificar los archivos en la ruta
     - npx cypress run --spec "cypress/e2e/todo.cy.js" --browser chrome
   allow_failure: true   # Permite que el trabajo falle sin afectar el pipeline
+  artifacts:
+    paths: 
+      - cypress/
+    when: always
   only:
     - main
